@@ -1,0 +1,27 @@
+#include <R.h>
+#define USE_RINTERNALS
+#include <Rinternals.h>
+#include <Rdefines.h>
+
+#ifdef BUILD_DLL
+#define EXPORT __declspec(dllexport)
+EXPORT void setattrib();
+EXPORT SEXP copy();
+#endif
+
+// Wrappers for R internal functions. We can't rely on calling
+// Rf_setAttrib and Rf_duplicate directly from .Call in R on
+// all platforms, as we found out when v1.6.5 went to CRAN on
+// 25 Aug 2011, see Professor Ripley's response that day.
+
+void setattrib(SEXP x, SEXP name, SEXP value)
+{
+    setAttrib(x,name,value);
+}               
+
+SEXP copy(SEXP x)
+{
+    return(duplicate(x));
+} 
+
+
